[MVT] __Value oop not preserved when safepointing at return

XMLWordPrintable

      # Internal Error (/oracle/valhalla/src/hotspot/share/oops/oop.inline.hpp:319), pid=12619, tid=12621
      # assert(check_obj_alignment(result)) failed: address not aligned: 0x00000000baadbabe

      Stack: [0x00007f91c4aad000,0x00007f91c4bad000], sp=0x00007f91c4ba9250, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x17b798c] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
      V [libjvm.so+0x17b87af] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0xb5c372] report_vm_error(char const*, int, char const*, char const*, ...)+0x112
      V [libjvm.so+0xa03ed2] oopDesc::decode_heap_oop_not_null(unsigned int)+0xd2
      V [libjvm.so+0xa05c3c] void ExtendedOopClosure::verify<unsigned int>(unsigned int*)+0x6c
      V [libjvm.so+0x12c85cb] InstanceKlass::oop_oop_iterate_nv(oop, MarkAndPushClosure*)+0x10b
      V [libjvm.so+0x12cd226] MarkSweep::follow_object(oop)+0x336
      V [libjvm.so+0x12c5b8f] MarkSweep::FollowRootClosure::do_oop(oop*)+0x11f
      V [libjvm.so+0x14084c3] InterpreterOopMap::iterate_oop(OffsetClosure*) const+0x103
      V [libjvm.so+0xc9d9c8] frame::oops_interpreted_do(OopClosure*, RegisterMap const*, bool)+0x368
      V [libjvm.so+0x16e224a] JavaThread::oops_do(OopClosure*, CodeBlobClosure*)+0x22a
      V [libjvm.so+0x16ed27e] Threads::possibly_parallel_oops_do(bool, OopClosure*, CodeBlobClosure*)+0x4e
      V [libjvm.so+0xdcf8b8] GenCollectedHeap::process_roots(StrongRootsScope*, GenCollectedHeap::ScanningOption, OopClosure*, OopClosure*, CLDClosure*, CLDClosure*, CodeBlobToOopClosure*)+0x98
      V [libjvm.so+0xdd0358] GenCollectedHeap::full_process_roots(StrongRootsScope*, bool, GenCollectedHeap::ScanningOption, bool, OopsInGenClosure*, CLDClosure*)+0x68
      V [libjvm.so+0xdd5ec9] GenMarkSweep::mark_sweep_phase1(bool)+0xb9
      V [libjvm.so+0xdd6d1b] GenMarkSweep::invoke_at_safepoint(ReferenceProcessor*, bool)+0x19b
      V [libjvm.so+0x16dfc47] TenuredGeneration::collect(bool, bool, unsigned long, bool)+0xc7
      V [libjvm.so+0xdd2610] GenCollectedHeap::collect_generation(Generation*, bool, unsigned long, bool, bool, bool, bool)+0x350
      V [libjvm.so+0xdd4585] GenCollectedHeap::do_collection(bool, bool, unsigned long, bool, GenCollectedHeap::GenerationType)+0xb75
      V [libjvm.so+0xdd4a58] GenCollectedHeap::do_full_collection(bool, GenCollectedHeap::GenerationType)+0x38
      V [libjvm.so+0x17b9083] VM_GenCollectFull::doit()+0xe3
      V [libjvm.so+0x17f39d8] VM_Operation::evaluate()+0x218
      V [libjvm.so+0x17efd1a] VMThread::evaluate_operation(VM_Operation*)+0x11a
      V [libjvm.so+0x17f0bf4] VMThread::loop()+0x2e4
      V [libjvm.so+0x17f143f] VMThread::run()+0xcf
      V [libjvm.so+0x142735a] thread_native_entry(Thread*)+0xfa

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: