8189613: [MVT] __Value oop not preserved when safepointing at return

Reviewed-by: roland